--- a/ssidang/FullScreenSample/res/layout/activity_main.xml
+++ b/ssidang/FullScreenSample/res/layout/activity_main.xml
@@ -4,33 +4,35 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="@string/hello_world"
-        tools:context=".MainActivity" />
-
-    <TextView
         android:id="@+id/sensorXLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:text="X" />
 
     <TextView
         android:id="@+id/sensorYLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/sensorXLabel" />
+        android:layout_below="@id/sensorXLabel"
+        android:text="Y" />
 
     <TextView
         android:id="@+id/sensorZLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/sensorYLabel" />
+        android:layout_below="@id/sensorYLabel"
+        android:text="Z" />
+
+    <SurfaceView
+        android:id="@+id/SurfaceView1"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:padding="@dimen/padding_medium"
+        tools:context=".MainActivity" />
 
 </RelativeLayout>
