xml 수정 ranking 페이지 수정,중, 맵 예시 변경

--- a/lk/gameUIDesign/res/layout/activity_main.xml
+++ b/lk/gameUIDesign/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical" >
 
             <View
-                android:id="@+id/view1"
+                android:id="@+id/blankView0"
                 style="@style/blankView" />
 
             <TextView
@@ -32,7 +32,7 @@
                 android:text="@string/gameTitle" />
 
             <View
-                android:id="@+id/view2"
+                android:id="@+id/blankView1"
                 style="@style/blankView" />
 
             <TextView
@@ -41,7 +41,7 @@
                 android:text="@string/Startgame" />
 
             <View
-                android:id="@+id/view3"
+                android:id="@+id/blankView2"
                 style="@style/blankView" />
 
             <TextView
@@ -50,7 +50,7 @@
                 android:text="@string/Ranking" />
 
             <View
-                android:id="@+id/view4"
+                android:id="@+id/blankView3"
                 style="@style/blankView" />
 
             <TextView
@@ -76,7 +76,7 @@
                 android:id="@+id/textViewTitleRanking"
                 style="@style/TitleText"
                 android:layout_below="@+id/blankView1"
-                android:layout_centerHorizontal="true" 
+                android:layout_centerHorizontal="true"
                 android:text="@string/Ranking" />
 
             <TextView
@@ -85,25 +85,33 @@
                 android:layout_alignLeft="@+id/textViewTitleRanking"
                 android:layout_below="@+id/textViewTitleRanking" />
 
+            <Spinner
+                android:id="@+id/spinnerStage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/blankView2"
+                android:prompt="@string/STAGE" />
+
             <TextView
                 android:id="@+id/textViewButtonSwap"
                 style="@style/ButtonText"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/blankView2"
                 android:text="@string/Ranking" />
 
             <TextView
                 android:id="@+id/textViewButtonReset"
                 style="@style/ButtonText"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/blankView2"
                 android:text="@string/reset" />
 
             <ViewFlipper
                 android:id="@+id/viewFlipperForListView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewButtonSwap"
+                android:layout_below="@+id/spinnerStage"
                 android:layout_centerHorizontal="true" >
 
                 <ListView
