--- a/lk/gameUIDesign/res/values/styles.xml
+++ b/lk/gameUIDesign/res/values/styles.xml
@@ -7,10 +7,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textColor">#66ffff</item>
-        <item name="android:shadowColor">#66ffff</item>
-        <item name="android:shadowDx">0.0</item>
-        <item name="android:shadowRadius">5</item>
-        <item name="android:shadowDy">0.0</item>
     </style>
 
     <style name="ButtonText">
@@ -18,10 +14,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textColor">#66ffff</item>
-        <item name="android:shadowColor">#66ffff</item>
-        <item name="android:shadowDx">0.0</item>
-        <item name="android:shadowRadius">3</item>
-        <item name="android:shadowDy">0.0</item>
     </style>
 
     <style name="PlainText">
@@ -29,15 +21,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textColor">#66ffff</item>
-        <item name="android:shadowColor">#66ffff</item>
-        <item name="android:shadowDx">0.0</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDy">0.0</item>
     </style>
     <style name="blankView">
-        <item name="android:id">@+id/view2"</item>        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:visibility">invisible</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/blank</item>
+        <item name="android:textColor">#00000000</item>
     </style>
 
 </resources>
