UI class들 정리했습니다...

--- a/lk/Sailing Text/res/layout/startgamelinearlayout.xml
+++ b/lk/Sailing Text/res/layout/startgamelinearlayout.xml
@@ -2,24 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#00000000" >
+    android:background="#00000000"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/StartgameBlankView"
-        android:text="@string/Startgame"
-        style="@style/blankView" />
+        style="@style/blankView"
+        android:text="@string/Startgame" />
 
     <TextView
         android:id="@+id/StartgameTextViewTitle"
-        style="@style/TitleText" />
-    
+        style="@style/TitleText"
+        android:text="@string/Startgame" />
+
     <TextView
         android:id="@+id/StartgameBlankView0"
         style="@style/blankView" />
-    
+
     <TextView
         android:id="@+id/StartgameTextViewNewgame"
+        style="@style/ButtonText"
         android:text="@string/newGame" />
 
     <TextView
@@ -28,6 +30,7 @@
 
     <TextView
         android:id="@+id/StartgameTextViewLoadgame"
+        style="@style/ButtonText"
         android:text="@string/loadGame" />
 
 </LinearLayout>
