--- a/lk/Sailing Text/res/layout/activity_main.xml
+++ b/lk/Sailing Text/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/MainFrameLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#000000"
@@ -16,166 +17,59 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
-            android:id="@+id/MainmenuLinearLayout"
+            android:id="@+id/MainLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00000000"
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/MainmenuBlankView"
+                android:id="@+id/MainBlankView"
                 style="@style/blankView" />
 
             <TextView
-                android:id="@+id/MainmenutextViewTitle"
+                android:id="@+id/MainTextViewTitle"
                 style="@style/TitleText"
                 android:text="@string/gameTitle" />
 
             <TextView
-                android:id="@+id/MainmenuBlankView0"
+                android:id="@+id/MainBlankView0"
                 style="@style/blankView" />
 
             <TextView
-                android:id="@+id/MainmenutextViewStartgame"
+                android:id="@+id/MainTextViewStartgame"
                 style="@style/ButtonText"
                 android:text="@string/Startgame" />
 
             <TextView
-                android:id="@+id/MainmenuBlankView1"
+                android:id="@+id/MainBlankView1"
                 style="@style/blankView" />
 
             <TextView
-                android:id="@+id/MainmenutextViewRanking"
+                android:id="@+id/MainTextViewRanking"
                 style="@style/ButtonText"
                 android:text="@string/Ranking" />
 
             <TextView
-                android:id="@+id/MainmenuBlankView2"
+                android:id="@+id/MainBlankView2"
                 style="@style/blankView" />
 
             <TextView
-                android:id="@+id/MainmenutextViewOption"
+                android:id="@+id/MainTextViewOption"
                 style="@style/ButtonText"
                 android:text="@string/Option" />
         </LinearLayout>
 
-        <LinearLayout
+        <mju.summer2012.itproject.team3.lk.sailingtext.startgame.StartGameLinearLayout
             android:id="@+id/StartgameLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:orientation="vertical" >
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
 
-            <TextView
-                android:id="@+id/StartgameBlankView"
-                style="@style/blankView"
-                android:text="@string/Startgame" />
-
-            <TextView
-                android:id="@+id/StartgameTextViewTitle"
-                android:text="@string/Startgame"
-                style="@style/TitleText" />
-
-            <TextView
-                android:id="@+id/StartgameBlankView0"
-                style="@style/blankView" />
-
-            <TextView
-                android:id="@+id/StartgameTextViewNewgame"
-                android:text="@string/newGame"
-                style="@style/ButtonText" />
-
-            <TextView
-                android:id="@+id/StartgameBlankView1"
-                style="@style/blankView" />
-
-            <TextView
-                android:id="@+id/StartgameTextViewLoadgame"
-                android:text="@string/loadGame"
-                style="@style/ButtonText" />
-        </LinearLayout>
-
-        <RelativeLayout
+        <mju.summer2012.itproject.team3.lk.sailingtext.ranking.RankingRelativeLayout
             android:id="@+id/RankingRelativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/RankingBlankView0"
-                style="@style/blankView"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-
-            <TextView
-                android:id="@+id/RankingtextViewTitle"
-                style="@style/TitleText"
-                android:layout_below="@+id/RankingBlankView0"
-                android:layout_centerHorizontal="true"
-                android:text="@string/Ranking" />
-
-            <TextView
-                android:id="@+id/RankingBlankView1"
-                style="@style/blankView"
-                android:layout_alignLeft="@+id/RankingtextViewTitle"
-                android:layout_below="@+id/RankingtextViewTitle" />
-
-            <Spinner
-                android:id="@+id/spinnerStage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/RankingBlankView1"
-                android:prompt="@string/STAGE" />
-
-            <TextView
-                android:id="@+id/textViewButtonSwap"
-                style="@style/ButtonText"
-                android:layout_above="@+id/RankingBlankView3"
-                android:layout_alignParentLeft="true" />
-
-            <TextView
-                android:id="@+id/textViewButtonReset"
-                style="@style/ButtonText"
-                android:layout_above="@+id/RankingBlankView2"
-                android:layout_alignParentRight="true"
-                android:text="@string/reset" />
-
-            <ViewFlipper
-                android:id="@+id/viewFlipperForListView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/spinnerStage"
-                android:layout_centerHorizontal="true" >
-
-                <ListView
-                    android:id="@+id/listViewTotalRanking"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                </ListView>
-
-                <ListView
-                    android:id="@+id/listViewStageRanking"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                </ListView>
-            </ViewFlipper>
-
-            <TextView
-                android:id="@+id/RankingBlankView2"
-                style="@style/blankView"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:text="@string/blank" />
-
-            <TextView
-                android:id="@+id/RankingBlankView3"
-                style="@style/blankView"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:text="@string/blank" />
-        </RelativeLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:id="@+id/OptionLinearLayout"
