Option 추가, 옵션 내의 TextView까지 추가

--- a/lk/Sailing Text/res/layout/activity_main.xml
+++ b/lk/Sailing Text/res/layout/activity_main.xml
@@ -39,6 +39,15 @@
         <TextView
             android:id="@+id/MainBlankView1"
             style="@style/blankView" />
+        
+        <TextView
+            android:id="@+id/MainTextViewOption"
+            style="@style/ButtonText"
+            android:text="@string/Option" />
+
+        <TextView
+            android:id="@+id/MainBlankView2"
+            style="@style/blankView" />
     </LinearLayout>
 
 </FrameLayout>
